2006-04-22  Martin Blom  <leviticus@elizabeth.datan.blom.org>

	* Nuked glgfx_bitmap_waitblit() and glgfx_bitmap_select().

	* Now uses fragment programs for texturing and coloring. 

	* Uses NPOT 2D textures if texture rectangles is not
	supported. (ATI).

2005-11-13  Martin Blom  <martin@blom.org>

	* glgfx: Too much to list, but I'll try: Does not need PBOs,
	compiles and (mostly) runs on ATI systems, added (required) FBO
	support, context handling, nuked waitblit() etc, added sprites,
	detect __GL_SYNC_TO_VBLANK, don't redraw screen unless something
	has changed, added normal and scaled blits. And more. :-)

2005-11-05  Martin Blom  <martin@blom.org>

	* glgfx: Cleanup, changed more APIs to use taglists, varargs
	taglists, runtime-check for pixel_buffer_object, correct
	initialization of used OpenGL extensions.

2005-03-08  Martin Blom  <martin@blom.org>

	* glgfx: Converted to automake.

2005-03-03  Martin Blom  <martin@blom.org>

	* glgfx: Initial import of glgfx sources into CVS.